# flow-fusion

./: .env.example  .gitignore  .gitmodules  .gitpod.yml  Makefile  README.md  docker-compose.yml  package.json
contracts/cosmos/: Cargo.toml  NOTICE
contracts/cosmos/artifacts/: checksums.txt  flow_fusion_cosmos.wasm
contracts/cosmos/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/ethereum/: foundry.toml
contracts/ethereum/lib/cross-chain-swap/contracts/interfaces/: IBaseEscrow.sol  IEscrowFactory.sol
contracts/ethereum/lib/cross-chain-swap/contracts/libraries/: TimelocksLib.sol
contracts/ethereum/script/: Deploy.s.sol
contracts/ethereum/solidity-utils/contracts/libraries/: AddressLib.sol
contracts/ethereum/src/: FlowFusionEscrowFactory.sol
contracts/flow-bridge-cosmos/: Cargo.toml
contracts/flow-bridge-cosmos/src/: contract.rs
contracts/flow-fusion-bridge/: Cargo.toml
contracts/flow-fusion-bridge/artifacts/: checksums.txt  flow_bridge_cosmos.wasm
contracts/flow-fusion-bridge/src/: contract.rs  msg.rs
contracts/working-test/: Cargo.toml
contracts/working-test/src/: lib.rs
docker/cosmos/: Dockerfile
docker/ethereum/: Dockerfile
frontend/: package.json  tailwind.config.js
frontend/src/: App.css  App.tsx
frontend/src/components/: BridgeInterface.tsx  Header.tsx  PlaceholderComponent.tsx  TWAPSettings.tsx  TransactionPreview.tsx
frontend/src/context/: ToastContext.tsx  WalletContext.tsx
frontend/src/hooks/: useBridge.ts  useWallet.ts
relayer/: Dockerfile  go.mod  go.sum
relayer/cmd/relayer/: main.go
relayer/internal/bridge/: helper.go  service.go
relayer/internal/config/: config.go
relayer/internal/cosmos/: client.go
relayer/internal/ethereum/: binding.go  client.go
relayer/internal/oneinch/: client.go  crypto.go
relayer/internal/twap/: engine.go  scheduler.go
scripts/: generate-bindings.sh  verify-chains.sh
