# Cargo.toml - Absolute minimal dependencies
[package]
name = "flow-fusion-cosmos"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true