[package]
name = "flow-bridge-cosmos"
version = "0.1.0"
authors = ["sejoroajose <53483859+sejoroajose@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cw-storage-plus = "1.1"
cw2 = "1.1"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
# Keep these versions that work with template
sha2 = "0.9"  # Older version
hex = "0.4"

[dev-dependencies]
cw-multi-test = "0.17"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true